@@ -1,5 +1,6 @@
 {{$NEXT}}
     - Use Dist::Zilla
+    - Make all warnings fatal
 
 0.38  Sun Mar 14 10:17:48 GMT 2010
     - Prevent double encoding of non-ASCII channel names
